# adventofcode

./: .gitignore  README.md
2016/: day2.py
2023/1/: day1.py
2023/2/: day2.py
2023/3/: day3.py
2023/4/: day4.py
2023/6/: day6.py
2023/8/: day8.py
2023/9/: day9.py
2024/: .clang-format  CMakeLists.txt  main.cpp
2024/include/: adventofcode2024.hpp
2024/src/: day1.cpp  day10.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day8.cpp
2025/: README.md  mix.exs
2025/.devcontainer/: Dockerfile  devcontainer.json
2025/lib/: aoc25_day1.ex  aoc25_day2.ex  aoc25_day3.ex  aoc25_day4.ex  aoc25_day5.ex
2025/test/: day1_test.exs  day2_test.exs  day3_test.exs  day4_test.exs  day5_test.exs
scripts/: new-day.sh
template/: day_template_py.txt
